# handler/listOpenings.go
@@ -14,7 +14,7 @@ import (
 // @Produce json
 // @Success 200 {object} ListOpeningResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /opening [get]
+// @Router /openings [get]
 func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
